Updated files for building distribution, and removed abstract method decorators in energy_base and solver_base to allow Cython to compile these files

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,28 @@
 info:
 	echo "Make file to help putting a compiled version of finmag together"
 
-
 libs:
 	python setup-cython.py build_ext --inplace
+	python setup-native.py # builds native/ .so files. 
 
 #copy to alternative location
 cp:
-	python distcp.py
-	cp -av finmag/tests /tmp/finmag/finmag/tests
-	
+	python distcp.py /tmp/finmag/
+	cp pytest.ini /tmp/finmag/
+
 test:
-	cd /tmp/finmag/finmag/tests && PYTHONPATH=/tmp/finmag py.test -vx
+	cd /tmp/finmag/ && PYTHONPATH=/tmp/finmag py.test --verbose
+
+bundle:
+	cd /tmp/finmag && tar cvjf /tmp/FinMag-dist.tar.bz2 \
+		--exclude='*test*' \
+		--exclude=1d.nmesh \
+		--exclude=run_nmag_Eexch_log.log* \
+		--exclude=Makefile \
+		--exclude=distcp.* \
+		--exclude=*.pyc \
+		--exclude=setup2.so \
+		--exclude=__pycache__ .
 
 cleansrc:
 	find finmag -name *.so | xargs rm -f		
@@ -25,8 +36,9 @@ cleanbin:
 
 removebin:
 	rm -rf /tmp/finmag
+	rm -f /tmp/FinMag-dist.tar.bz2
 
 cleanall:
 	make removebin
 	make cleansrc
-	
+
