Use pyc files rather than py files in builds, where this does not cause tests to fail

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ info:
 libs:
 	python setup-cython.py build_ext --inplace
 	python setup-native.py # builds native/ .so files. 
+	python -m compileall *
 
 #copy to alternative location
 cp:
@@ -11,7 +12,7 @@ cp:
 	cp pytest.ini /tmp/finmag/
 
 test:
-	cd /tmp/finmag/ && PYTHONPATH=/tmp/finmag py.test --verbose
+	cd /tmp/finmag/ && PYTHONPATH=/tmp/finmag py.test --verbose -x
 
 bundle:
 	cd /tmp/finmag && tar cvjf /tmp/FinMag-dist.tar.bz2 \
@@ -20,14 +21,15 @@ bundle:
 		--exclude=run_nmag_Eexch_log.log* \
 		--exclude=Makefile \
 		--exclude=distcp.* \
-		--exclude=*.pyc \
+		--exclude=run_nmag_Eexch.py \
 		--exclude=setup2.so \
+		--exclude=__init__.pyc \
 		--exclude=__pycache__ .
 
 cleansrc:
-	find finmag -name *.so | xargs rm -f		
-	find finmag -name *.pyc | xargs rm -f		
-	find finmag -name __pychache__ | xargs rm -fr	
+	find finmag -name "*.so" | xargs rm -f		
+	find finmag -name "*.pyc" | xargs rm -f		
+	find finmag -name "__pychache__" | xargs rm -fr	
 
 cleanbin:
 	cd /tmp/finmag/finmag && find . -name "*.so" | xargs rm -f
