Add Makefile target 'doc-html-nobuildexamples' for a quick rebuild of only the html part of the documentation (without the need to rebuild the examples). This is useful for debugging when writing documentation. Note that currently this will only work if the examples were build at least once beforehand (e.g. using make-doc-html).

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,6 +6,7 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = _build
+SPHINXWARNINGOPTS ?= -W
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
@@ -44,7 +45,7 @@ clean:
 	-rm -rf $(BUILDDIR)/* modules/*
 
 htmlraw:
-	$(SPHINXBUILD) -W -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	$(SPHINXBUILD) $(SPHINXWARNINGOPTS) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 
 html: generate-doc htmlraw
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
