Add Makefile target which adds a version file and a __version__ attribute to the binary distribution (where the version is simply the changeset ID of the current tip).

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,7 +30,13 @@ cp:
 test:
 	cd ${FINMAGDIST_BUILD_DIR} && PYTHONPATH=${FINMAGDIST_BUILD_DIR} py.test --verbose -x
 
-bundle:
+add_version:
+	$(eval FINMAG_VERSION := $(shell hg --debug tags | awk '{print $$2}'))
+	@echo "FINMAG_VERSION: ${FINMAG_VERSION}"
+	echo ${FINMAG_VERSION} > ${FINMAGDIST_BUILD_DIR}/finmag/VERSION
+	echo '__version__ = "${FINMAG_VERSION}"' >> ${FINMAGDIST_BUILD_DIR}/finmag/__init__.py
+
+bundle: add_version
 	cd ${FINMAGDIST_BUILD_DIR} && tar cvjf ${FINMAGDIST_DEST_TARBALL} \
 		--exclude='*test*' \
 		--exclude=1d.nmesh \
