--- a/doc/Makefile
+++ b/doc/Makefile
@@ -17,9 +17,9 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
 # Variables used for converting .ipynb files (= IPython notebooks) to .rst files
 NBCONVERT ?= /usr/local/src/nbconvert/nbconvert.py
-IPYTHON_NOTEBOOK_SRC_DIR=ipython_notebooks_src
-IPYTHON_NOTEBOOK_DEST_DIR=ipython_notebooks_dest
-IPYTHON_NOTEBOOK_SRC_FILES=$(foreach file,$(wildcard ${IPYTHON_NOTEBOOK_SRC_DIR}/*.ipynb),$(shell basename $(file)))
+IPYTHON_NOTEBOOK_SRC_DIR ?= /home/ipython_nbserver/finmag/doc/ipython_notebooks_src
+IPYTHON_NOTEBOOK_DEST_DIR = ipython_notebooks_dest
+IPYTHON_NOTEBOOK_SRC_FILES = $(foreach file,$(wildcard ${IPYTHON_NOTEBOOK_SRC_DIR}/*.ipynb),$(notdir $(basename $(file))))
 
 export PYTHONPATH    := ../src:$(PYTHONPATH)
 
@@ -51,7 +51,7 @@ clean:
 	-rm -rf $(BUILDDIR)/* modules/* ${IPYTHON_NOTEBOOK_DEST_DIR}/*
 
 
-htmlraw:
+htmlraw: collect-ipython-notebooks
 	$(SPHINXBUILD) $(SPHINXWARNINGOPTS) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 
 html: generate-doc htmlraw
@@ -164,7 +164,7 @@ doctest:
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 #next target added to get Jenkins to run generate_doc.py before building the documentation.
-generate-doc: examples-for-doc collect-ipython-notebooks timing
+generate-doc: examples-for-doc timing
 	python generate_doc.py
 
 # The absolute path for the doc directory
@@ -179,20 +179,20 @@ timing:
 # Collect all .ipynb files in IPYTHON_NOTEBOOK_SRC_DIR and convert
 # them to .rst files in IPYTHON_NOTEBOOK_DEST_DIR, which are then
 # included in the documentation
-collect-ipython-notebooks:
+collect-ipython-notebooks: ${IPYTHON_NOTEBOOK_DEST_DIR}
+	@echo "IPYTHON_NOTEBOOK_SRC_DIR: ${IPYTHON_NOTEBOOK_DEST_DIR}"
 	@command -v ${NBCONVERT} >/dev/null 2>&1 || { echo >&2 "Not collecting ipython notebooks because the variable NBCONVERT does not point to a valid nbconvert.py script (value: ${NBCONVERT})"; exit 1; }
 	-rm -rf ${IPYTHON_NOTEBOOK_DEST_DIR}/*
-	@echo "Converting IPython notebooks to .rst format..."
+	@echo "Converting IPython notebooks in directory '${IPYTHON_NOTEBOOK_SRC_DIR}' to .rst format..."
 	@for FILE in ${IPYTHON_NOTEBOOK_SRC_FILES} ; do \
 	    echo "    Converting file: $$FILE"; \
-	    ${NBCONVERT} --format=rst ${IPYTHON_NOTEBOOK_SRC_DIR}/$$FILE ${IPYTHON_NOTEBOOK_DEST_DIR}/$$FILE.rst; \
+	    ${NBCONVERT} --format=rst ${IPYTHON_NOTEBOOK_SRC_DIR}/$$FILE.ipynb ${IPYTHON_NOTEBOOK_DEST_DIR}/$$FILE.rst; \
+	    sed -i "1s|^|$$FILE\n$$FILE\n\n|" ${IPYTHON_NOTEBOOK_DEST_DIR}/$$FILE.rst; \
+	    sed -i "2s|.|=|g" ${IPYTHON_NOTEBOOK_DEST_DIR}/$$FILE.rst; \
 	done
 
-# This target can be used to print Makefile variables (such as PROJECT_DIR)
-# from the command line, for example by saying 'make print-PROJECT_DIR'.
-print-%:
-	@echo $($*)
-
+${IPYTHON_NOTEBOOK_DEST_DIR}:
+	install -d ${IPYTHON_NOTEBOOK_DEST_DIR}
 
 #this target can be run to execute py.test ../examples to get figure
 #files ready. This will happen automatically when Jenkins runs, as
@@ -265,3 +265,8 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 
 ../examples/std_prob_3/table.rst:
 	cd ../examples/std_prob_3 && PYTHONPATH=$(PYTHON_ROOTS) python run.py
+
+# This target can be used to print Makefile variables (such as PROJECT_DIR)
+# from the command line, for example by saying 'make print-PROJECT_DIR'.
+print-%:
+	@echo $($*)
