tweak Makefile for exchange_demag example to speed up build of documentation
Mesh would always be built and nmag always be run, even if the needed files
already existed. This has been fixed.

--- a/examples/exchange_demag/Makefile
+++ b/examples/exchange_demag/Makefile
@@ -1,14 +1,20 @@
- all: nmag
+all: nmag
 
-mesh:
+nmag: energies_ref.txt averages_ref.txt
+
+averages_ref.txt: bar_dat.ndt
+	ncol bar time m_Py_0 m_Py_1 m_Py_2 > averages_ref.txt
+
+energies_ref.txt: bar_dat.ndt
+	ncol bar E_exch_Py E_demag_Py > energies_ref.txt
+
+bar_dat.ndt: bar30_30_100.nmesh.h5
+	nsim run_nmag.py --clean
+
+bar30_30_100.nmesh.h5:
 	- netgen -geofile=bar30_30_100.geo -meshfiletype="Neutral Format" -meshfile=bar30_30_100.neutral -batchmode
 	nmeshimport --netgen bar30_30_100.neutral bar30_30_100.nmesh.h5
 	gzip -f bar30_30_100.neutral
-
-nmag: mesh
-	nsim run_nmag.py --clean
-	ncol bar time m_Py_0 m_Py_1 m_Py_2 > averages_ref.txt
-	ncol bar E_exch_Py E_demag_Py > energies_ref.txt
 
 meshshow:
 	nmeshpp --vtk bar.nmesh.h5 bar.vtk
