new example in docs for switching off the precession

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -213,7 +213,7 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 	../src/finmag/tests/comparison/demag/table.rst ../examples/exchange_demag/simple1D.png \
 	../examples/exchange_demag/finmag_exch_density.npy ../examples/exchange_demag/finmag_demag_density.npy \
 	../examples/spatially-varying-anisotropy/profile.png \
-	../examples/exchange_demag/timings/results.rst
+	../examples/exchange_demag/timings/results.rst ../examples/precession/precession.png
 
 ../examples/macrospin/alpha-1-00.png: ../examples/macrospin/test_macrospin.py
 	cd ../examples/macrospin/ && PYTHONPATH=$(PYTHON_ROOTS) python test_macrospin.py
@@ -265,6 +265,9 @@ examples-for-doc: ../examples/macrospin/alpha-1-00.png ../examples/macrospin/alp
 
 ../examples/std_prob_3/table.rst:
 	cd ../examples/std_prob_3 && PYTHONPATH=$(PYTHON_ROOTS) python run.py
+
+../examples/precession/precession.png:
+	cd ../examples/precession && PYTHONPATH=$(PYTHON_ROOTS) python run.py
 
 # This target can be used to print Makefile variables (such as PROJECT_DIR)
 # from the command line, for example by saying 'make print-PROJECT_DIR'.
