Add some version information installation instructions.

--- a/install/user-only-system/Makefile
+++ b/install/user-only-system/Makefile
@@ -1,6 +1,8 @@
 package: instructions.html
 	rm -rf finmag-installation-instructions
 	mkdir -p finmag-installation-instructions
+	echo "Archive created `date`" > finmag-installation-instructions/version.txt
+	hg tip | head -n 4 >> finmag-installation-instructions/version.txt
 	cp -v instructions.txt instructions.html install-libraries.sh test_libraries.py finmag-installation-instructions
 	tar cfvz finmag-installation-instructions.tar.gz finmag-installation-instructions
 	rm -rf finmag-installation-instructions
