--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ignore=sandbox --verbose
+addopts = --ignore=sandbox --verbose --ignore=install/user-only-system
 python_files=test_*.py *_tests.py
