Make tmp directory in which precompiled header (pch) files are stored more unique - previsouly this could lead to an error when more than one finmag installation in the same user's name run on the same machine.
(With Dmitri).

--- a/native/Makefile
+++ b/native/Makefile
@@ -22,7 +22,7 @@ MODULE_DIR = ../src/finmag/native
 # The list of extension modules to build
 MODULES = sundials.so llg.so llb.so fast_sum_lib.so
 # The directory to store the precompiled header file.
-PRECOMPILED_HEADER_DIR ?= /tmp/$(USER)/finmag-pch
+PRECOMPILED_HEADER_DIR ?= /tmp/$(USER)/finmag-pch/$(abspath .)
 # Name of the binary that runs all unit tests
 UNIT_TEST_BINARY=$(MODULE_DIR)/run_ci_tests.bin
 # Directory for CI unit test results
